@@ -3,7 +3,6 @@
 
 <glade-interface>
 <requires lib="gnome"/>
-<requires lib="canvas"/>
 <requires lib="bonobo"/>
 
 <widget class="GnomeApp" id="MainWindow">
@@ -554,16 +553,9 @@
 	      </child>
 
 	      <child>
-		<widget class="GnomeCanvas" id="usage-canvas">
+		<widget class="GtkDrawingArea" id="usage-area">
 		  <property name="height_request">18</property>
 		  <property name="visible">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="aa">False</property>
-		  <property name="scroll_x1">0</property>
-		  <property name="scroll_y1">0</property>
-		  <property name="scroll_x2">100</property>
-		  <property name="scroll_y2">100</property>
-		  <property name="pixels_per_unit">1</property>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
