@@ -1,3 +1,7 @@
+2006-11-18  Soren Sandmann <sandmann@redhat.com>
+
+	* main.c, memprof.glade: Replace GnomeCanvas with GtkDrawingArea
+
 Mon Aug  7 19:03:38 2006  Søren Sandmann  <sandmann@redhat.com>
 
 	* NEWS: Updates
